--- a/CV/styles.css
+++ b/CV/styles.css
@@ -4,33 +4,48 @@ html {
     margin: 0;
     padding: 0;
 }
+
+
 body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: #f7f7f7;
+    font-family: 'Josefin Sans', sans-serif;
+    color: #150225;
     margin: 0;
 }
 
+
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
+    color: #463F45;
+    text-shadow: 6px 6px 8px #975D8B;
 }
+
 .container {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: auto;
     display: block;
+
 }
 
 /* Header */
 
 header {
-    background-color: #fff;
-    border-bottom: 3px solid #4a69ab;
+    background-color: #DCFAC6;
+    border-bottom: 3px solid #60065F;
     padding: 30px;
+    opacity: .6;
+    z-index: 1;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
     header div {
         display: inline-block;
     }
         header .container div:last-of-type {
             float: right;
+            font-family: 'Josefin Sans';
+            text-shadow: 6px 6px 30px #975D8B;
         }
             header .container div:last-of-type p {
                 margin: 0;
@@ -45,19 +60,33 @@ header {
 /* Main */
 
 main {
-    padding: 0 30px 30px 30px;
+    padding: 156px 30px 30px 30px;
+    background-image: url("pale.gif");
+    background-attachment: fixed;
 }
     main section h2 {
-        color: #4a69a0;
+        color: #463F45;
         margin-top: 40px;
     }
     main section h3 {
         margin-bottom: 0;
         font-weight: 600;
+        margin-top: 30px;
     }
     main section h4 {
         margin-top: 0;
         font-style: italic;
-        color: #505050;
+        font-size: 20px;
+        color: #463F45;
         font-weight: 400;
+        margin-top: 10px;
+    }
+
+    .pic {
+      max-width: 500px;
+      display: block;
+      box-shadow: 10px 10px 50px #C9E7B3;
+      position: fixed;
+      top: 30%;
+      right: 50px;
     }
