--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,12 +105,10 @@ opacity: 0.4;
     100% { right: 45%; }
 }
 
-#mermaid img{
-max-width: 700px;
-position: absolute;
-top: 275px;
-right: 0px;
-opacity: 0.1;
+#mermaid {
+max-height: 800px;
+position: inherit;
+opacity: 0.8;
 }
 
 #skullkraken img{
