--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,12 +112,10 @@ opacity: 0.8;
 }
 
 
-#skullkraken img{
-max-width: 700px;
-position: absolute;
-left: 0px;
-top: 500px;
-opacity: 0.1;
+#skullkraken {
+max-width: 350px;
+position: inherit;
+opacity: 0.4;
 }
 
 #big-ship img{
@@ -131,23 +129,58 @@ transform: scaleX(-1);
 opacity: 0.2;
 }
 
-#big-waves img{
+#big-waves {
 max-width: 100%;
-position: absolute;
-left: 0px;
-animation: waves2 12s backwards;
-animation-delay: 2s;
-top: 1150px;
+position: inherit;
 opacity: 0.5;
 }
 
-@keyframes waves2 {
-    100% { left: 75%; }
+.slide-in-blurred-right {
+	-webkit-animation: slide-in-blurred-right 12s cubic-bezier(0.230, 1.000, 0.320, 1.000) infinite both;
+	        animation: slide-in-blurred-right 12s cubic-bezier(0.230, 1.000, 0.320, 1.000) infinite both;
 }
 
-@keyframes big-ship {
-    100% { left: 45%; }
+@-webkit-keyframes slide-in-blurred-right {
+  0% {
+    -webkit-transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+            transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+    -webkit-transform-origin: 0% 50%;
+            transform-origin: 0% 50%;
+    -webkit-filter: blur(40px);
+            filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) scaleY(1) scaleX(1);
+            transform: translateX(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
 }
+@keyframes slide-in-blurred-right {
+  0% {
+    -webkit-transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+            transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+    -webkit-transform-origin: 0% 50%;
+            transform-origin: 0% 50%;
+    -webkit-filter: blur(40px);
+            filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) scaleY(1) scaleX(1);
+            transform: translateX(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+
 
 #kraken-1 img{
 max-width: 700px;
