--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ h3 {
   font-weight: bold;
   padding-top: 20px;
   letter-spacing: 1px;
+  text-align: center;
 }
 
 
@@ -79,6 +80,7 @@ h1 {
 
 #mermaid {
 opacity: 0.5;
+/*on mobile set a max height*/
 }
 
 #mermaid:hover {
@@ -117,6 +119,7 @@ animation: bounce 6s;
    transition: opacity .25s ease-in-out;
    -moz-transition: opacity .25s ease-in-out;
    -webkit-transition: opacity .25s ease-in-out;
+   /*on mobile set a max-width*/
  }
 
  #skullkraken:hover {
@@ -125,6 +128,7 @@ animation: bounce 6s;
    -moz-transition: transform .25s ease-in-out;
    -webkit-transition: transform .5s ease-in-out;
    opacity: 1;
+   left: 50px;
 /* Question for Alex: how to make the zoom out more gentle */
  }
 
@@ -139,7 +143,42 @@ height: auto;
 right: -300px;
 }
 
-
 #newship:hover {
   right: 0px;
+}
+
+#ship2 {
+  max-width: 550px;
+  vertical-align: center;
+}
+
+#waves {
+  max-width: 400px;
+  opacity: 0.1;
+}
+
+#waves:hover {
+ opacity: 0.8;
+ transition: opacity 1s ease-in-out;
+ -moz-transition: opacity 1s ease-in-out;
+ -webkit-transition: opacity 1s ease-in-out;
+ /*question for Alex - how to make the ease out more gentle*/
+}
+ #ship22 {
+  position: absolute; /* these 4 lines will center the logo */
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  max-width: 550px;
+ }
+
+#bigwaves {
+  opacity: 0.4;
+}
+
+#flowers {
+  max-height: 360px;
+  width: auto;
+  /*ask Alex how to centre this more*/
 }
