--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 /* Header */
 header .logo img{
-max-width: 285px;
+max-width: 385px;
+opacity: 0.85;
 }
 
 p {
@@ -16,13 +17,23 @@ h3 {
   text-align: center;
 }
 
+h4 {
+  font-family: 'Crimson Text', serif;
+  font-size: 24px;
+  font-weight: bold;
+  padding-top: 20px;
+  letter-spacing: 0.5px;
+  text-align: center;
+}
 
 .top-p {
   padding-left: 260px;
   padding-right: 220px;
 }
 
-
+footer {
+  margin-bottom: 30px;
+}
 
 body {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,207cca+97,7db9e8+100&0.1+1,1+100 */
@@ -135,14 +146,15 @@ animation: bounce 6s;
    -moz-transition: opacity .25s ease-in-out;
    -webkit-transition: opacity .25s ease-in-out;
       padding-left: 100px;
+      transition: transform .25s ease-in-out;
+      -moz-transition: transform .25s ease-in-out;
+      -webkit-transition: transform .5s ease-in-out;
    /*on mobile set a max-width and remove padding-left*/
  }
 
  #skullkraken:hover {
    transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-   transition: transform .25s ease-in-out;
-   -moz-transition: transform .25s ease-in-out;
-   -webkit-transition: transform .5s ease-in-out;
+
    opacity: 1;
    padding-left: 100px;
 /* Question for Alex: how to make the zoom out more gentle */
@@ -150,18 +162,16 @@ animation: bounce 6s;
 
 
 #newship {
-right: -100px
-  position: fixed;
-  transition: right 0.4s ease-in-out;
--webkit-transition: right 0.4s ease-in-out;
+
+transition: margin-left 4s ease-in-out;
+-webkit-transition: margin-left 4s ease-in-out;
 width: 300px;
 height: auto;
-right: -300px;
+margin-left: 100px;
 }
 
-#newship:hover {
-  right: 0px;
-  /*animate this on hover somehow*/
+#newship.ship-animate-in {
+  margin-left: 0px;
 }
 
 #ship2 {
@@ -170,15 +180,15 @@ right: -300px;
 }
 
 #waves {
-  max-width: 400px;
-  opacity: 0.1;
+  max-width: 500px;
+  opacity: 0.3;
+  transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -webkit-transition: opacity 1s ease-in-out;
 }
 
 #waves:hover {
  opacity: 0.8;
- transition: opacity 1s ease-in-out;
- -moz-transition: opacity 1s ease-in-out;
- -webkit-transition: opacity 1s ease-in-out;
  /*question for Alex - how to make the ease out more gentle*/
 }
  #ship22 {
@@ -195,14 +205,6 @@ right: -300px;
   /*set a media query to display:none*/
 }
 
-#flowers {
-  max-height: 360px;
-  width: auto;
-  padding-left: 100px;
-  /*ask Alex how to centre this more*/
-  /*set a media query of max height around 150px*/
-}
-
 #tentacle {
   opacity: 0.7;
   max-height: 150px;
@@ -212,6 +214,11 @@ right: -300px;
 
 .center {
   text-align: center;
+}
+
+.columnimage {
+  max-width: 360px;
+  height: auto;
 }
 
 #pirate {
@@ -232,7 +239,157 @@ right: -300px;
  }
 
  #treasure {
-   max-width: 360px;
-   height: auto;
-   opacity: 0.5;
+   opacity: 0.8;
  }
+
+#shipwreck {
+
+  opacity: 0.5;
+}
+
+#flowers {
+max-height: 400px;
+  /*set a media query of max height around 150px*/
+}
+
+#pirate {
+
+}
+
+#ship3 {
+max-width: 500px;
+}
+
+#skulls {
+  opacity: 0.7;
+  position: inherit;
+  vertical-align: bottom;
+}
+
+.stickybutton {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  float: right;
+  border-radius: 10px;
+  padding: 0px 5px 0px 5px;
+  opacity; 0.8;
+}
+
+h4 .buttontext {
+    font-family: 'Tangerine', cursive;
+    font-size: 100px;
+}
+
+#skull-side {
+  opacity: 0.9;
+}
+
+@media (max-width: 800px){
+  #whale {
+    max-width: 250px;
+    padding-bottom: 30px;
+  }
+}
+
+@media (max-width: 600px) {
+
+#skullkraken {
+  margin: auto;
+  padding-left: 0px;
+  max-width: 200px;
+  display: block;
+
+}
+
+#skullkraken:hover {
+  transform: scale(1);
+  padding-left: 0px;
+}
+#mermaid:hover {
+  animation: none;
+  opacity: 0.9;
+}
+#mermaid img{
+  margin: auto;
+  padding-left: 0px;
+  max-height: 300px;
+  display: block;
+  transition: none;
+  animation: none;
+}
+
+  #bigwaves {
+    display: none;
+  }
+
+  #seagulls {
+    max-width: 150px;
+    margin-bottom: 20px;
+  }
+
+  h1 {
+    font-size: 42px;
+  }
+
+h3 {
+  font-size: 26px;
+}
+
+#kraken1 {
+  max-width: 200px;
+}
+
+#ship2 {
+  display: none;
+}
+
+#whale {
+  max-width: 250px;
+}
+
+#waves {
+  display: none;
+}
+
+#ghostship {
+  padding-right: 40px;
+}
+
+#flowers {
+  max-height: 200px;
+}
+
+#skull-side {
+  max-width: 200px;
+  margin-top: -75px;
+  margin-bottom: -50px;
+}
+
+#treasure {
+  display: none;
+}
+
+#shark {
+  max-width: 300px;
+  padding-top: 20px;
+  margin-bottom: -30px;
+}
+
+#shipwreck {
+  max-width: 300px;
+}
+
+#shark2 {
+  display: none;
+}
+
+#ship3 {
+  max-width: 300px;
+}
+
+#skulls {
+  max-width: 300px;
+}
+
+}
